@@ -539,7 +539,7 @@ L<http://sourceforge.net/projects/polyclipping/>
 
 =head1 VERSION
 
-This module was built around, and includes, Clipper version 4.8.0.
+This module was built around, and includes, Clipper version 4.8.3.
 
 =head1 AUTHOR
 
