@@ -1,5 +1,7 @@
 Revision history for Perl extension Math::Clipper.
 
+  - Upgraded the Clipper library to the newest available version 4.8.3.
+
 1.07  Tue May 01 12:30:00 2012
 
   - Upgraded the Clipper library to the newest available version 4.8.0.
